[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Ziloka <50429450+ziloka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
scipy = "^1.11.1"
pyarrow = "^12.0.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
